--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head><title>Red Assassin</title></head>
 <body>
+<script>  
+if (window.opener) window.opener.parent.location.replace('http://repl.it');
+if (window.parent != window) window.parent.location.replace('http://repl.it');
+</script>
 <h1>Red Assassin is here</h1>
 </body>
 </html>
