--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <button class="btn btn-primary">Enter next level</button>
+          <button class="btn btn-primary">Unlock</button>
         </div>
       </div>
       <div class="embed-responsive embed-responsive-21by9">
