--- a/tabnab.html
+++ b/tabnab.html
@@ -1,6 +1,6 @@
 <html>
 
-<head>Error</head>
+    <head><title>Error</title></head>
 <body>
 <h1>Not Found</h1>
     <p>The requested URL was not found on this server.</p>
