--- a/twitterxpoc.html
+++ b/twitterxpoc.html
@@ -82,7 +82,7 @@
                     try{
                         //below condition one is for download bar chrome
                         if(margin == downloadBarSize || win.location.href == "about:blank"){
-                            result.innerHTML = "[+] You are twitter user, username "+user+", below are your details";
+                            result.innerHTML = "[+] User Matched, username "+user+", below are your details";
                             getUserInfo();
                             
                         }else{
