--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    
-  </head>
-  <body>
+<!doctype html>
 
-    <p>hello</p>
-  </body>
+<html>
+<head>
+  <title>h1 form test</title>
+</head>
+
+<body>
+<script async src="https://hackerone.com/9a279a7d-5b1f-4437-ac76-6eda0783797f/embedded_submissions/script" data-url="https://hackerone.com/9a279a7d-5b1f-4437-ac76-6eda0783797f/embedded_submissions/new" data-name="h1-embedded-submission"></script>
+</body>
 </html>
