--- a/honepoc.html
+++ b/honepoc.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>redirect xspoc h1</title>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'unsafe-inline' https://hackerone.com https://www.cloudflare.com/ https://api.hackertarget.com/">
+        <meta http-equiv="Content-Security-Policy" content="default-src 'unsafe-inline' https://red-assassin.github.io/ https://hackerone.com https://www.cloudflare.com/ https://api.hackertarget.com/">
     </head>
     <body>
         <div>
