--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
     <body style="background-image: ;">
         <div class="container" style="max-width: 500px; margin-top: 20px;">
             <h3>Please wait we are downloading tomclancy Rainbow Six Siege<br /><br /></h3>
-            <img src="Rainbow-Six-siege.jpg" class="rounded" width="470" /><br /><br />
+            <img src="https://e.snmc.io/lk/gv/x/c125e47ef58d6a6452555dddc80f287a/5276026" class="rounded" width="470" /><br /><br />
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:100%"></div>
             </div>
