--- a/tabnab.html
+++ b/tabnab.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title>404 Not Found</title>
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@_d3f4u17_">
+    <meta name="twitter:creator" content="@_d3f4u17_">
+    <meta name="twitter:title" content="This is a sample card">
+    <meta name="twitter:description" content="This is a sample description">
 </head>
 <body>
     <h1>Not Found</h1>
