--- a/malicious-app.html
+++ b/malicious-app.html
@@ -10,4 +10,9 @@
 <a href="https://slack.com/oauth/v2/authorize?client_id=1021671975639.1033839615009&scope=users.profile:read&user_scope=users.profile:read"><img alt=""Add to Slack"" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
 
 
+  
+<code>
+This PoC demonstrates how a malicious app can access an authorized user's email, when email restrictions are imposed in the workspace.
+Ref:- https://api.slack.com/methods/users.profile.get
+</code>
 </body>
