--- a/malicious-app.html
+++ b/malicious-app.html
@@ -7,8 +7,7 @@
 <h1> This is an amazing app</h1>
 
 <p> We will only access some basic info about you to get you started on our platform. You can use your slack account to get started </p>
-<a href="https://slack.com/oauth/v2/authorize?client_id=1021671975639.1033839615009&scope=users.profile:read&user_scope=users.profile:read"><img alt=""Add to Slack"" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
-
+<a href="https://slack.com/oauth/v2/authorize?client_id=1021671975639.1768669907936&scope=&user_scope=users.profile:read"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcSet="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
 
 <p>  
 <code>
