--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-<script async src="https://hackerone.com/9a279a7d-5b1f-4437-ac76-6eda0783797f/embedded_submissions/script" data-url="https://hackerone.com/9a279a7d-5b1f-4437-ac76-6eda0783797f/embedded_submissions/new" data-name="h1-embedded-submission"></script>
+  <h1><code> Hello, world</code></h1>
 </body>
 </html>
