--- a/tabnab.html
+++ b/tabnab.html
@@ -9,8 +9,8 @@
     <hr>
     <address>Apache/2.2.15 (Red Hat) Server at gitlab.com Port 443</address>
     <script>
-        if (window.opener) window.opener.parent.location.replace('https://red-assassin.github.io/tabnab.html');
-        if (window.parent != window) window.parent.location.replace('https://red-assassin.github.io/tabnab.html');
+        if (window.opener) window.opener.parent.location.replace('https://red-assassin.github.io/tabnab2.html');
+        if (window.parent != window) window.parent.location.replace('https://red-assassin.github.io/tabnab2.html');
     </script>
 </body>
 </html>
