--- a/cors.html
+++ b/cors.html
@@ -17,7 +17,7 @@ if (this.readyState == 4 && this.status == 200) {
 	console.log(a);
 }
 };
-xhttp.open("GET", "https://api-uat.netinsights.veritas.com/profile", true);
+xhttp.open("GET", "https://api-uat.netinsights.veritas.com/appdetailinfolist", true);
 xhttp.withCredentials = true;
 xhttp.send();
 }
