--- a/cors.html
+++ b/cors.html
@@ -9,7 +9,7 @@
 <p id='demo'></p>
 <script>
 function cors() {
-var endpoint = document.getElementById('endpoint').text;	
+var endpoint = document.getElementById('endpoint').value;	
 var xhttp = new XMLHttpRequest();
 xhttp.onreadystatechange = function() {
 if (this.readyState == 4 && this.status == 200) {
