--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-  <h1><code> Hello, world</code></h1>
-  <iframe src="https://portal.threatpulse.com/report/values?_dc=1667894686318&amp;field=cs_host&amp;dataSource=sg&amp;query=google.com&amp;page=1&amp;start=0&amp;limit=10"></iframe>
+  <iframe src="https://portal.threatpulse.com/report/values?_dc=1667894686318&field=cs_host&dataSource=sg&query=go&page=1&start=0&limit=10"></iframe>
+  <h1><code>Copy the above text and paste it below to win 100 $</code></h1>
+  <textarea></textarea>
 </body>
 </html>
